# match-and-fuse

./: .gitignore  LICENSE  README.md  eval.py  gradio_demo.py  main.py  requirements.txt
data/: README.md
data/benchmark_captions/: actionfigure_1_p1.json  actionfigure_1_p2.json  actionfigure_1_p3.json  actionfigure_1_p4.json  actionfigure_1_p5.json  actionfigure_2_p1.json  actionfigure_3_p1.json  backpack_dog_p1.json  backpack_dog_p2.json  backpack_p1.json  backpack_p2.json  backpack_p3.json  bear_p1.json  bear_p2.json  bear_p3.json  bear_p4.json  bear_plushie_p1.json  bear_plushie_p2.json  bear_plushie_p3.json  bear_plushie_p4.json  bear_plushie_p5.json  bear_plushie_p6.json  bear_plushie_p7.json  bear_plushie_p8.json  bear_plushie_p9.json  berry_bowl_p1.json  booking_p1.json  booking_p2.json  booking_p3.json  booking_p4.json  booking_p5.json  booking_p6.json  can_p1.json  can_p2.json  candle_p1.json  cat2_p1.json  cat2_p2.json  cat2_p3.json  cat2_p4.json  cat_p1.json  (+360 more)
dino_matchsim/: README.md  pyproject.toml
dino_matchsim/dino_matchsim/: __init__.py  dinomatchsim.py
romatch/models/: matcher.py
romatch/utils/: kde.py
scripts/: compute_dataset_matches.py  prepare_data.sh  prepare_images.py
src/maf_flux/: captioning.py  compute_matches.py  constants.py  controlnet.py  maf_pipeline.py  math.py  model.py  sampling.py  util.py
src/maf_flux/annotator/depth_anything/: __init__.py
src/maf_flux/modules/: layers.py
src/maf_flux/utils/: image_utils.py  method_utils.py
